yaml/1-svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-front
  namespace: kub-5
spec:
  ports:
    - name: nginx
      port: 9080
      targetPort: 80
  selector:
    app: app-kub-5
