yaml/2-ing-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-front
  namespace: kub-5
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-front
            port:
              number: 9080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: svc-back
            port:
              number: 9118
